package es.ull.patrones.practica7.Events;

public interface myEventListener {
    void update(String aviso);

}
